// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Card component CardBody should allow scrolling content with the scrollable prop is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="css-1klm29z-Body css-156bl4t-borderRadius css-2ktc4y-medium components-card__body components-card-body"
+     class="css-drdujb-Scrollable css-9laccq-scrollableScrollbar css-flie1-scrollY components-scrollable css-1klm29z-Body css-156bl4t-borderRadius css-2ktc4y-medium components-card__body components-card-body"
      data-wp-c16t="true"
      data-wp-component="CardBody"
    >
      Body
    </div>
`;

exports[`Card Card component CardBody should render with a darker background color when isShady is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="css-1klm29z-Body css-156bl4t-borderRadius css-2ktc4y-medium components-card__body components-card-body"
+     class="css-1klm29z-Body css-156bl4t-borderRadius css-2ktc4y-medium css-1284mxe-shady components-card__body components-card-body"
      data-wp-c16t="true"
      data-wp-component="CardBody"
    >
      Body
    </div>
`;

exports[`Card Card component CardFooter should render with a darker background color when isShady is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-14ezg3c-Footer-borderRadius-borderColor-medium-footerStyles components-card__footer components-card-footer"
+     class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-zu9yjw-Footer-borderRadius-borderColor-medium-shady-footerStyles components-card__footer components-card-footer"
      data-wp-c16t="true"
      data-wp-component="CardFooter"
    >
      Footer
    </div>
`;

exports[`Card Card component CardFooter should use the justify prop to align its content, like a Flex container 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-14ezg3c-Footer-borderRadius-borderColor-medium-footerStyles components-card__footer components-card-footer"
+     class="css-a57899-Flex css-qs9i8n-base css-1ozeagb-ItemsRow components-flex css-14ezg3c-Footer-borderRadius-borderColor-medium-footerStyles components-card__footer components-card-footer"
      data-wp-c16t="true"
      data-wp-component="CardFooter"
    >
      Footer
    </div>
`;

exports[`Card Card component CardHeader should render with a darker background color when isShady is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-knjbwb-Header-borderRadius-borderColor-medium-headerStyles components-card__header components-card-header"
+     class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-1e8qxyk-Header-borderRadius-borderColor-medium-shady-headerStyles components-card__header components-card-header"
      data-wp-c16t="true"
      data-wp-component="CardHeader"
    >
      Header
    </div>
`;

exports[`Card Card component should add different amounts of white space when using the size prop 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -6,18 +6,18 @@
    >
      <div
        class="css-1ruapvy-Content"
      >
        <div
-         class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-knjbwb-Header-borderRadius-borderColor-medium-headerStyles components-card__header components-card-header"
+         class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-1to91lo-Header-borderRadius-borderColor-large-headerStyles components-card__header components-card-header"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          Header
        </div>
        <div
-         class="css-1klm29z-Body css-156bl4t-borderRadius css-2ktc4y-medium components-card__body components-card-body"
+         class="css-1klm29z-Body css-156bl4t-borderRadius css-1url6g9-large components-card__body components-card-body"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          Code is Poetry
        </div>
`;

exports[`Card Card component should add rounded border when the isRounded prop is true 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
-     "border-radius": "calc(8px - 1px)",
      "box-shadow": "0 0 0 1px rgba(0, 0, 0, 0.1)",
      "outline": "none",
    },
  ]
`;

exports[`Card Card component should get the isBorderless and isSize props (passed from its context) overriddenwhen the same props is specified directly on the component 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -6,25 +6,25 @@
    >
      <div
        class="css-1ruapvy-Content"
      >
        <div
-         class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-1knfgzz-Header-borderRadius-borderColor-large-borderless-headerStyles components-card__header components-card-header"
+         class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-utqozr-Header-borderRadius-borderColor-small-headerStyles components-card__header components-card-header"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          Header
        </div>
        <div
-         class="css-1klm29z-Body css-156bl4t-borderRadius css-1url6g9-large components-card__body components-card-body"
+         class="css-1klm29z-Body css-156bl4t-borderRadius css-2ktc4y-medium components-card__body components-card-body"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          Body
        </div>
        <div
-         class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-jtu0fc-Footer-borderRadius-borderColor-large-borderless-footerStyles components-card__footer components-card-footer"
+         class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-egj1bt-Footer-borderRadius-borderColor-xSmallCardPadding-footerStyles components-card__footer components-card-footer"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        >
          Footer
        </div>
`;

exports[`Card Card component should pass the isBorderless and isSize props from its context to its sub-components 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,30 +1,30 @@
  <div>
    <div
-     class="style-surface components-surface css-2wm9l0-Card-boxShadowless-rounded-cardStyles components-card"
+     class="style-surface components-surface css-9kgksu-Card-rounded-cardStyles components-card"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-1ruapvy-Content"
      >
        <div
-         class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-1knfgzz-Header-borderRadius-borderColor-large-borderless-headerStyles components-card__header components-card-header"
+         class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-utqozr-Header-borderRadius-borderColor-small-headerStyles components-card__header components-card-header"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          Header
        </div>
        <div
-         class="css-1klm29z-Body css-156bl4t-borderRadius css-1url6g9-large components-card__body components-card-body"
+         class="css-1klm29z-Body css-156bl4t-borderRadius css-5swhss-small components-card__body components-card-body"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          Body
        </div>
        <div
-         class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-jtu0fc-Footer-borderRadius-borderColor-large-borderless-footerStyles components-card__footer components-card-footer"
+         class="css-a57899-Flex css-lmbxer-base css-1ozeagb-ItemsRow components-flex css-zrnqar-Footer-borderRadius-borderColor-small-footerStyles components-card__footer components-card-footer"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        >
          Footer
        </div>
`;

exports[`Card Card component should render correctly 1`] = `
.emotion-0 {
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-1 {
  height: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.emotion-4>* {
  min-width: 0;
}

.emotion-5 {
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-5:last-child {
  border-bottom: none;
}

.emotion-5:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-5:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
}

.emotion-7:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-7:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-8 {
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-12 {
  box-sizing: border-box;
  display: block;
  width: 100%;
}

.emotion-13 {
  border-color: rgba(0, 0, 0, 0.1);
}

.emotion-17 {
  box-sizing: border-box;
  overflow: hidden;
}

.emotion-17>img,
.emotion-17>iframe {
  display: block;
  height: auto;
  max-width: 100%;
  width: 100%;
}

.emotion-22 {
  border-top: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-22:first-of-type {
  border-top: none;
}

.emotion-22:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-22:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-23 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
}

@media not ( prefers-reduced-motion ) {
  .emotion-23 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

.emotion-24 {
  border-radius: 8px;
}

<div>
  <div
    class="style-surface components-surface emotion-0 components-card"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2 emotion-3 emotion-4 components-flex emotion-5 components-card__header components-card-header"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        Card Header
      </div>
      <div
        class="emotion-6 emotion-7 emotion-8 components-card__body components-card-body"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        Card Body 1
      </div>
      <div
        class="emotion-6 emotion-7 emotion-8 components-card__body components-card-body"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        Card Body 2
      </div>
      <hr
        aria-orientation="horizontal"
        class="style-divider components-divider emotion-12 emotion-13 components-card__divider components-card-divider"
        data-wp-c16t="true"
        data-wp-component="CardDivider"
        role="separator"
      />
      <div
        class="emotion-6 emotion-7 emotion-8 components-card__body components-card-body"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        Card Body 3
      </div>
      <div
        class="emotion-17 emotion-7 components-card__media components-card-media"
        data-wp-c16t="true"
        data-wp-component="CardMedia"
      >
        <img
          alt="Card Media"
          src="https://images.unsplash.com/photo-1566125882500-87e10f726cdc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1867&q=80"
        />
      </div>
      <div
        class="emotion-2 emotion-3 emotion-4 components-flex emotion-22 components-card__footer components-card-footer"
        data-wp-c16t="true"
        data-wp-component="CardFooter"
      >
        Card Footer
      </div>
    </div>
    <div
      aria-hidden="true"
      class="emotion-23 components-elevation emotion-24"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="emotion-23 components-elevation emotion-24"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`Card Card component should show a box shadow when the elevation prop is greater than 0 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -9,17 +9,17 @@
      >
        Code is Poetry
      </div>
      <div
        aria-hidden="true"
-       class="css-jirgir-Elevation-sx-Base-sx-Base-elevationStyles components-elevation css-3cgmlt-elevationClassName"
+       class="css-pudyh0-Elevation-sx-Base-sx-Base-elevationStyles components-elevation css-3cgmlt-elevationClassName"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
-       class="css-12yxda4-Elevation-sx-Base-sx-Base-elevationStyles components-elevation css-3cgmlt-elevationClassName"
+       class="css-pudyh0-Elevation-sx-Base-sx-Base-elevationStyles components-elevation css-3cgmlt-elevationClassName"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
`;

exports[`Card Card component should support the legacy extraSmall value for the size prop as an alias for the xSmall value 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`Card Card component should warn when the isElevated prop is passed 1`] = `
.emotion-0 {
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-1 {
  height: 100%;
}

.emotion-2 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
}

@media not ( prefers-reduced-motion ) {
  .emotion-2 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

.emotion-3 {
  border-radius: 8px;
}

.emotion-4 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
}

@media not ( prefers-reduced-motion ) {
  .emotion-4 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="style-surface components-surface emotion-0 components-card"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-1"
    >
      Code is Poetry
    </div>
    <div
      aria-hidden="true"
      class="emotion-2 components-elevation emotion-3"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="emotion-4 components-elevation emotion-3"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;
